2009-11-18	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/t/all.t, pf/t/services.t: Added tests to check if snort starts 
	successfully and if pfdetect can bind to it

	* Copied pf/conf/templates/snort.conf to 
	pf/conf/templates/snort.conf.pre_snort-2.8
	Modified pf/conf/templates/snort.conf, pf/lib/pf/services.pm: snort
	fixes
	Removed -o flag to snort startup string (deprecated in snort)
	Updated default snort.conf
	Fixes #581, #846, #849;
	http://www.packetfence.org/mantis/view.php?id=581
	http://www.packetfence.org/mantis/view.php?id=846
	http://www.packetfence.org/mantis/view.php?id=849

2009-11-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Installation_Guide.odt: Added repositories in
	OS requirements section of the install guide:
	- CentOS need extras which is enabled by default
	- RedHat needs EPEL (extra packages for enterprise linux) which is 
	disabled by default

	* pf/bin/pfcmd, pf/conf/ui.conf
	pf/html/admin/configuration/switches.php, pf/lib/pf/pfcmd/pfcmd.pm:
	Fixed SNMPv3 configuration from pfcmd and Web admin interface
	The SNMPUserNameTrap parameter was not exposed. Thanks to
	Jean-Francois Laporte for reporting this. Fixes #853;
	http://www.packetfence.org/mantis/view.php?id=853
	
2009-11-16	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Aruba.pm: Fixed string concatenation problem.
	Also took the opportunity to removed duplicated ERROR: string appended
	at the beginning of logger calls and commented out very verbose dumper 
	debug code.

	* pf/conf/violations.conf: Added new UserAgent sample string to block
	more iPods and reindexed the BlackBerry one

2009-11-13	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/cgi-bin/redir.cgi: Validating if $cgi->user_agent is defined. 
	Fixes #850;
	http://www.packetfence.org/mantis/view.php?id=850

2009-11-10	Regis Balzard <rbalzard@inverse.ca>
	* pf/html/admin/configuration/switches_edit.php: 
	* pf/html/admin/configuration/switches_add.php: Fixed issues with SSH