@@ -1,0 +1,8 @@
+log4perl.rootLogger=INFO, LOGFILE
+
+log4perl.appender.LOGFILE=Log::Log4perl::Appender::File
+log4perl.appender.LOGFILE.filename=/usr/local/pf/logs/packetfence-tests.log
+log4perl.appender.LOGFILE.mode=append
+    
+log4perl.appender.LOGFILE.layout=PatternLayout
+log4perl.appender.LOGFILE.layout.ConversionPattern=%d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
