@@ -9,7 +9,7 @@ use Log::Log4perl;
 use File::Basename qw(basename);
 use lib '/usr/local/pf/lib';
 
-Log::Log4perl->init("/usr/local/pf/conf/log.conf");
+Log::Log4perl->init("/usr/local/pf/t/log.conf");
 my $logger = Log::Log4perl->get_logger( basename($0) );
 Log::Log4perl::MDC->put( 'proc', basename($0) );
 Log::Log4perl::MDC->put( 'tid',  0 );
